Fixed popup animation

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col20">
 
-                    <ul class="dotList" id="isoList">
+                    <ul class="dotList" id="contactList">
                         <li class="Program CFP Devices Social">
                             <div class="icon" style="background: url('../../images/team/JoVoordeckers.jpg') no-repeat center;"></div>
                             <h4>Jo Voordeckers</h4>
