--- a/app/views/schedule/devoxxians.html
+++ b/app/views/schedule/devoxxians.html
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col20">
 
-                    <ul class="dotList" id="isoList">
+                    <ul class="dotList" id="contactList">
                         <li class="Monday JavaSE">
                             <div class="icon" style="background: url(../../images_dummy/tweeter_dummy.jpg) no-repeat center;"></div>
                             <h4>Monday JavaSE</h4>
