--- a/app/views/schedule/devoxxians.html
+++ b/app/views/schedule/devoxxians.html
@@ -6,9 +6,9 @@
             <div class="row">
                 <div class="col9">
 
-                    <h1>Devoxxians 2013</h1>
+                    <h1>The 2013 Devoxxians</h1>
 
-                    <p>A first batch of Devoxx speakers will be released in August followed by a second batch in September.</p>
+                    <p>A first batch of Devoxxians will be released in August followed by a second batch beginning of September.</p>
 
                 </div>
                 <div class="col10 push1">
