Removed flag, will be replaced by event type

--- a/app/views/schedule/schedule.html
+++ b/app/views/schedule/schedule.html
@@ -168,9 +168,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -200,9 +200,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/gb.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/gb.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -234,9 +234,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -294,9 +294,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/gb.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/gb.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -328,9 +328,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -362,9 +362,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -422,9 +422,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -456,9 +456,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/gb.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/gb.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -490,9 +490,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/gb.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/gb.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -551,9 +551,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -585,9 +585,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -619,9 +619,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -680,9 +680,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -714,9 +714,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
@@ -748,9 +748,9 @@
                             <img src="../../images_dummy/tweeter_dummy.jpg" alt=""/>
                         </div>
 
-                        <div class="flag">
-                            <img src="../../images/flags/belgium.jpg" alt="Belguim"/>
-                        </div>
+                        <!--<div class="flag">-->
+                            <!--<img src="../../images/flags/belgium.jpg" alt="Belguim"/>-->
+                        <!--</div>-->
 
                         <div class="speaker">
                             Name speaker
