--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1104,7 +1104,41 @@ footer .sponsors a {
 
 /* @end */
 	
+/* @group Page: Speakers */
 
+.speakers #topinfo {
+	padding: 30px 0;
+}
+.speakers #topinfo h1 {
+	margin-top: 40px;
+}
+
+/* @end */
+
+
+/* @group Page: Schedule detail */
+
+.detail #topinfo .icon {
+	display: block;
+	height: 90px;
+	background: #fad799;
+	-webkit-border-radius: 85px;
+	border-radius: 85px;	
+	width: 90px;
+	padding: 20px;
+}
+#detail .speakerpic {
+	float: left;
+	border: 2px solid #fff;
+	width: 170px;
+	margin: 0 auto 30px; 
+	height: 170px;
+	overflow: hidden;
+	-webkit-border-radius: 85px;
+	border-radius: 85px;	
+}
+
+/* @end */
 
 /* @group Helper classes */
 
