Hide empty schedule, style the schedule rows for 2 row text

--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -563,6 +563,12 @@ li.existingTag {
 
 #sheduleDays .talks .row {
     font: 12px/17px "GothamBook","Helvetica Neue",Arial,Helvetica,Geneva,sans-serif !important;
+    padding: 33px 0 20px !important;
+}
+
+#sheduleDays .talks .row .speakerpic,
+#sheduleDays .talks .row .icon { 
+  margin: -20px 20px 0 0 !important;
 }
 
 /* Static pages track icons */
