- Added new sponsor - Updated FAQ

--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -27,10 +27,10 @@
 
                     <h4 class="acco_title">Registration</h4>
                     <div class="acco_content" style="display: block;">
-                        <p>Devoxx 2013 will open soon</p>
+                        <p>Devoxx registration is <a href="https://regbe.devoxx.com">now open</a>, we expect (like previous years) to sell out around the 2nd week of October!</p>
                     </div>
 
-                    <h4 class="acco_title"> Prices</h4>
+                    <h4 class="acco_title">Prices</h4>
                     <div class="acco_content">
                         <p>
                             Devoxx University is 350 Euro (2 days)<br>
@@ -50,6 +50,32 @@
                             Quickie are short 15 minute presentations during Lunch breaks<br>
                             BOF sessions are 60 minutes long, scheduled in the evening and are informal<br><br>
                             (*) Recorded for Parleys.com</p>
+                    </div>
+
+                    <h4 class="acco_title">Schedule</h4>
+                    <div class="acco_content">
+                        <p>
+                            Expect the full schedule to be online 2nd week of September<br>
+                            The University days starts at 9h30 on Monday morning<br>
+                            The University ends on Tuesday evening with BOFs running until 22h00<br>
+                            The Conference days start on Wednesday morning with keynote at 9h30<br>
+                            The last Conference sessions ends on Friday 12h50</p>
+                    </div>
+
+                    <h4 class="acco_title">Wristband</h4>
+                    <div class="acco_content">
+                        <p>
+                            Pickup your Uni. wristband on Sunday evening between 17h30 and 18h30<br>
+                            Or on Monday morning from 8h00 onwards<br>
+                            Pickup your Conf. wristband on Tuesday evening between 17h30 and 18h30<br>
+                            Or Wednesday morning from 7h30 onwards<br>
+                            IMPORTANT NOTE: wristbands are strictly personal and can't be shared</p>
+                    </div>
+
+                    <h4 class="acco_title">eTicket</h4>
+                    <div class="acco_content">
+                        <p>
+                            We'll email your eTicket 2 weeks before the conference</p>
                     </div>
 
                     <h4 class="acco_title">Twitter</h4>
