Added news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,13 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <img src="../images/news/devoxxians.png" alt="">
+                <div class="date">21 Aug. '13</div>
+                <h4>First Devoxxians</h4>
+                <p>We've published a first batch of <a href="#devoxxians">Devoxxians</a>.</p>
+                <p>Expect many more speakers in the next weeks followed soon after with the complete schedule.</p>
+            </li>
+            <li>
                 <img src="../images/news/register_today.png" alt="">
                 <div class="date">23 July '13</div>
                 <h4>Registration Open</h4>
