Added missing images

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1075,7 +1075,7 @@ footer .sponsors a {
 /* @group Page: Team */
 
 #topinfo {
-	padding: 60px 0 70px;
+	padding: 60px 0 0;
 }
 #filters {
 	padding: 7px 0 15px;
