--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -585,6 +585,25 @@ li.existingTag {
   margin: 20px 30px !important;
 }
 
+#detail .banner h4 {
+  text-align: left;
+  line-height: 39px;
+  margin-bottom: -5px !important;
+}
+
+#detail .links a {
+  background: url(../images/icons_shares.png) no-repeat 0 0;
+  display: inline-block;
+  height: 39px;
+  margin: 5px 10px 0;
+  text-indent: -9999px;
+  width: 39px;
+}
+
+#detail .links a.btn_twitter {
+  background-position: -48px 0;
+}
+
 /* Static pages track icons */
 
 .icon_architecture {
