Corrected link to Devoxxians

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,14 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
-                <img src="../images/news/devoxxians.png" alt="">
+                <a href="/dv13-speakers.html"><img src="../images/news/devoxxians.png" alt=""></a>
                 <div class="date">21 Aug. '13</div>
                 <h4>First Devoxxians</h4>
-                <p>We've published a first batch of <a href="#devoxxians">Devoxxians</a>.</p>
+                <p>We've published a first batch of <a href="/dv13-speakers.html">Devoxxians</a>.</p>
                 <p>Expect many more speakers in the next weeks followed soon after with the complete schedule.</p>
             </li>
             <li>
-                <img src="../images/news/register_today.png" alt="">
+                <a href="https://regbe.devoxx.com"><img src="../images/news/register_today.png" alt=""></a>
                 <div class="date">23 July '13</div>
                 <h4>Registration Open</h4>
                 <p>Online registration is <a href="https://regbe.devoxx.com/public#DV13">now open</a>.</p>
@@ -171,8 +171,7 @@
 
             </li>
             <li>
-
-                    <img src="../images/news/call4papers.png" alt="Call For Papers" />
+                <img src="../images/news/call4papers.png" alt="Call For Papers" />
                     <div class="date">6 June '13</div>
                     <h4>Call For Papers Now Open</h4>
                     <p>The CFP for Devoxx Belgium 2013 is now open and closes July 5th.
