- Replaced news images with JPGs - Added keynote speakers news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,28 +132,35 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
-                <a href="/dv13-speakers.html"><img src="../images/news/devoxxians.png" alt=""></a>
+                <a href="/dv13-speakers.html"><img src="../images/news/keynote.jpg" alt=""></a>
+                <div class="date">21 Aug. '13</div>
+                <h4>Keynote Speakers</h4>
+                <p><a href="/dv13-brian-goetz.html">Brian Goetz</a>, <a href="/dv13-mark-reinhold.html">Mark Reinhold</a> and <a href="/dv13-lars-bak.html">Lars Bak</a> will keynote at this years Devoxx.</p>
+                <p>During the welcome keynote by <a href="/dv13-stephan-janssen.html?presId=3151">Stephan Janssen</a> we anticipate several guest appearances.</p>
+            </li>
+            <li>
+                <a href="/dv13-speakers.html"><img src="../images/news/devoxxians.jpg" alt=""></a>
                 <div class="date">21 Aug. '13</div>
                 <h4>First Devoxxians</h4>
                 <p>We've published a first batch of <a href="/dv13-speakers.html">Devoxxians</a>.</p>
                 <p>Expect many more speakers in the next weeks followed soon after with the complete schedule.</p>
             </li>
             <li>
-                <a href="https://regbe.devoxx.com"><img src="../images/news/register_today.png" alt=""></a>
+                <a href="https://regbe.devoxx.com"><img src="../images/news/register_today.jpg" alt=""></a>
                 <div class="date">23 July '13</div>
                 <h4>Registration Open</h4>
                 <p>Online registration is <a href="https://regbe.devoxx.com/public#DV13">now open</a>.</p>
                 <p>Devoxx has been sold out 5 years in a row and we assume this year will not be any different.  So don't wait too long to get your Devoxx tickets, you've been warned!</p>
             </li>
             <li>
-                <img src="../images/news/experience.png" alt="">
+                <img src="../images/news/experience.jpg" alt="">
                 <div class="date">8 July '13</div>
                 <h4>Call For Papers Closed</h4>
                 <p>Thanks to the many Devoxxians that submitted talks! The program committee will review, rate and schedule the talks in the coming weeks.
                 Expect a first batch beginning of August followed by another batch early September.</p>
             </li>
             <li>
-                <a href="http://www.devoxx.com/display/4KIDSNL/Home"><img src="../images/news/d4kids_nl.png" alt=""></a>
+                <a href="http://www.devoxx.com/display/4KIDSNL/Home"><img src="../images/news/d4kids_nl.jpg" alt=""></a>
                     <div class="date">8 June '13</div>
                     <h4>Devoxx4Kids NL</h4>
                     <p>The first <a href="http://www.devoxx.com/display/4KIDSNL/Home">Dutch Devoxx4Kids</a> event, organized
@@ -162,7 +169,7 @@
                         <br><a href="http://www.devoxx.com/display/4KIDSNL/Home">Read more...</a></p>
             </li>
             <li>
-                <a href="#about"><img src="../images/news/site.png" alt=""></a>
+                <a href="#about"><img src="../images/news/site.jpg" alt=""></a>
                     <div class="date">6 June '13</div>
                     <h4>New site</h4>
                     <p>Hope you like our brand new website?<br>It's built using AngularJS and the call for papers is available on
@@ -171,7 +178,7 @@
 
             </li>
             <li>
-                <img src="../images/news/call4papers.png" alt="Call For Papers" />
+                <img src="../images/news/call4papers.jpg" alt="Call For Papers" />
                     <div class="date">6 June '13</div>
                     <h4>Call For Papers Now Open</h4>
                     <p>The CFP for Devoxx Belgium 2013 is now open and closes July 5th.
@@ -180,7 +187,7 @@
             </li>
             <li>
                 <!--<a href="#">-->
-                    <img src="../images/news/registration.png" alt="Devoxx Registrations" />
+                    <img src="../images/news/registration.jpg" alt="Devoxx Registrations" />
                     <div class="date">6 June '13</div>
                     <h4>Registrations Open Soon</h4>
                     <p>As always we under-estimated the work on our new website including the new Call For Papers module.
@@ -189,7 +196,7 @@
             </li>
             <li>
                 <!--<a href="#">-->
-                    <img src="../images/news/borntobe.png" alt="Born To Be" />
+                    <img src="../images/news/borntobe.jpg" alt="Born To Be" />
                 <div class="date">6 June '13</div>
                     <h4>New Devoxx Theme</h4>
                     <p>The majority of the Devoxxians are "Born to be..." a developer and many tell us they actually feel reborn after attending Devoxx.  :)</p>
@@ -216,7 +223,7 @@
             </li>            
             <li>
                 <a href="#/team">
-                <img src="../images/news/team.png" alt="The Devoxx BE team" />
+                <img src="../images/news/team.jpg" alt="The Devoxx BE team" />
                 <div class="date">23 Feb '13</div>
                 <h4>The Devoxx Team</h4>
                 <p>The international Devoxx team has already been working hard behind the scenes.
