Deeplink from homepage to speakers page with track filter

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -242,6 +242,7 @@
                 <h2><a name="tracks"></a>Tracks <span>2013</span></h2>
                 <ul class="dotList" id="trackList">
                     <li>
+                        <a href="/dv13-speakers.html#track-22">
                         <div class="icon">
                             <img src="../images/tracks/icon_web.png" alt="Web and HTML5" />
                         </div>
@@ -250,8 +251,10 @@
                             <p>Web frameworks, HTML5, CSS3, the next JavaScript ES6, libraries and tools that help you build the next generation of web apps</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-7">
                         <div class="icon">
                             <img src="../images/tracks/icon_cloud.png" alt="Cloud and Big Data" />
                         </div>
@@ -260,8 +263,10 @@
                             <p>Cloud computing, Platforms as a Service, Big Data and NoSQL</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-13">
                         <div class="icon">
                             <img src="../images/tracks/icon_javaee.png" alt="JaveEE" />
                         </div>
@@ -270,8 +275,10 @@
                             <p>Java Enterprise Edition, appservers, databases, MOM, batch processing and related JSRs</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-19">
                         <div class="icon">
                             <img src="../images/tracks/icon_future.png" alt="Future at Devoxx" />
                         </div>
@@ -280,8 +287,10 @@
                             <p>Developing for embedded devices, the internet of things, arduino, raspberry pi, quadcopters, robots and related</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-10">
                         <div class="icon">
                             <img src="../images/tracks/icon_mobile.png" alt="Mobile" />
                         </div>
@@ -290,8 +299,10 @@
                             <p>Tools frameworks and libraries for building mobile apps, both as MobileWeb or native Android and iOS app</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-5">
                         <div class="icon">
                             <img src="../images/tracks/icon_alternative.png" alt="Alternative Languages on the JVM" />
                         </div>
@@ -300,8 +311,10 @@
                             <p>Anything related to other languages than Java running on the JVM, the languages, tools, libraries and best practices</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-9">
                         <div class="icon">
                             <img src="../images/tracks/icon_javase.png" alt="JavaSE" />
                         </div>
@@ -310,8 +323,10 @@
                             <p>Java Standard Edition, anything non-related to JaveEE, like the language, JDK, performance tuning, modularity, etc...</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-6">
                         <div class="icon">
                             <img src="../images/tracks/icon_methology.png" alt="Methodology" />
                         </div>
@@ -320,8 +335,10 @@
                             <p>Software development methodologies and related subjects</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                     <li>
+                        <a href="/dv13-speakers.html#track-2">
                         <div class="icon">
                             <img src="../images/tracks/icon_architecture.png" alt="Architecture and Security" />
                         </div>
@@ -330,6 +347,7 @@
                             <p>Software architecture, encryption and best practices to develop secure software</p>
                             <span class="textballoon"></span>
                         </div>
+                        </a>
                     </li>
                 </ul>
                 <!--<br><br>-->
