--- a/app/views/home.html
+++ b/app/views/home.html
@@ -268,7 +268,7 @@
                     <li>
                         <a href="/dv13-speakers.html#track-13">
                         <div class="icon">
-                            <img src="../images/tracks/icon_javaee.png" alt="JaveEE" />
+                            <img src="../images/tracks/icon_javaee.png" alt="Java EE" />
                         </div>
                         <h4>Java EE</h4>
                         <div class="popup">
@@ -284,7 +284,7 @@
                         </div>
                         <h4>Future&lt;Devoxx&gt;</h4>
                         <div class="popup">
-                            <p>Developing for embedded devices, the internet of things, arduino, raspberry pi, quadcopters, robots and related</p>
+                            <p>Developing for embedded devices, the internet of things, Arduino, raspberry pi, quadcopters, robots and related</p>
                             <span class="textballoon"></span>
                         </div>
                         </a>
@@ -316,11 +316,11 @@
                     <li>
                         <a href="/dv13-speakers.html#track-9">
                         <div class="icon">
-                            <img src="../images/tracks/icon_javase.png" alt="JavaSE" />
+                            <img src="../images/tracks/icon_javase.png" alt="Java SE" />
                         </div>
                         <h4>Java SE</h4>
                         <div class="popup">
-                            <p>Java Standard Edition, anything non-related to JaveEE, like the language, JDK, performance tuning, modularity, etc...</p>
+                            <p>Java Standard Edition, anything non-related to Jave EE, like the language, JDK, performance tuning, modularity, etc...</p>
                             <span class="textballoon"></span>
                         </div>
                         </a>
