Added 'Schedule' news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="/dv13-schedule.html"><img src="../images/news/schedule.jpg" alt=""></a>
+                <div class="date">3 Sep. '13</div>
+                <h4>Devoxx Schedule</h4>
+                <p>A big chunk of the Devoxx schedule is now available online.</p>
+                <p>We're still reviewing some extra speakers and topics, so expect more talks in the coming weeks!
+                    <a href="/dv13-schedule.html">View schedule</a></p>
+            </li>
+            <li>
                 <a href="/dv13-speakers.html"><img src="../images/news/keynote.jpg" alt=""></a>
                 <div class="date">21 Aug. '13</div>
                 <h4>Keynote Speakers</h4>
