--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -55,10 +55,14 @@
                     <h4 class="acco_title">Schedule</h4>
                     <div class="acco_content">
                         <p>
-                            Expect the full schedule to be online 2nd week of September<br>
-                            The University days starts at 9h30 on Monday morning<br>
+                            We server breakfast from 8h00 onwards<br>
+                            The University days starts at 9h30 on Monday and Tuesday morning<br>
+                            Lunch during University days is from 12h30 til 13h30 in the exhibition area<br>
                             The University ends on Tuesday evening with BOFs running until 22h00<br>
                             The Conference days start on Wednesday morning with keynote at 9h30<br>
+                            Wednesday evening we've a reception courtesy by Kiffer.be<br>
+                            Thursday evening we've a movie from 20h00 til 22h00 in Room 8 (First come, first served)<br>
+                            After the movie we organize a Devoxx party at the Noxx from 22h00 onwards<br>
                             The last Conference sessions ends on Friday 12h50</p>
                     </div>
 
